overflow bug

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,20 +5,25 @@ section {
 }
 .inner-section {
   background: linear-gradient(145deg,#3452ff,#2ed397);
-  height: 100%;
+  height: 100vh;
   width: 100%;
-  position: fixed;
   box-sizing: border-box;
   transition: all 0.3s;
+  overflow: hidden;
 }
 .wrap {
   transform-origin: right;
   position: relative;
   transition: transform 0.8s cubic-bezier(0.2, 1, 0.3, 1);
   height: 100%;
+  width: 100%;
+}
+.overflow-class {
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
 }
 .wrap.open {
-  height: 406px;
   transform: scale(0.8) translateX(-32vw) translateZ(0)!important;
   transform-origin: center;
 }
@@ -129,7 +134,7 @@ section {
 }
 @media screen and (max-width: 1600px) {
   section {
-    width: 1370px;
+    /* width: 1370px; */
     margin: auto
   }
 }
