--- a/src/app/partials/shared/header/header.component.css
+++ b/src/app/partials/shared/header/header.component.css
@@ -2,10 +2,25 @@
   height: 95px;
   width: 100%;
   background-color: #fff;
+  position: relative;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.12);
+  z-index: 100;
+}
+.head-fixed {
+  height: 95px;
+  position: fixed;
+  width: inherit;
+  z-index: 100;
+  background-color: #fff;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.12);
+}
+.head-fixed-inner {
+  z-index: 100;
+  height: 95px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.12);
 }
 .head-inner {
   display: flex;
@@ -59,4 +74,11 @@ nav {
 }
 .links.active::after {
   transform: scaleX(1)
+}
+
+@media screen and (max-width: 1600px) {
+  .head-fixed {
+    /* width: 1370px; */
+    margin: auto
+  }
 }
